# signal-ops

./: .env  .env.docker  .env.example  .env.local.example  .gitignore  ARCHITECTURE_CLOUDFLARE.md  Makefile  README.md  Shopify Editions Winter 2026 - Technical Breakdown.txt  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  wrangler.toml
.archive/: CLEANUP_REPORT.md
.github/workflows/: cloudflare-deploy.yml  fly-deploy.yml
cpp-signal-core/: .dockerignore  CMakeLists.txt  Dockerfile  InstallationLog.txt
cpp-signal-core/include/signalops/: indicators.h  order_book.h  redis_interface.h  signal_processor.h
cpp-signal-core/src/: indicators.cpp  main.cpp  order_book.cpp  redis_interface.cpp  signal_processor.cpp  wasm_entry.cpp
cpp-signal-core/tests/: CMakeLists.txt
db/: init.sql
db/migrations/: 003_decision_logs.sql
docs/: BACKEND_ARCHITECTURE.md  BACKEND_IMPLEMENTATION_PROGRESS.md  CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT.md  DOCKER_DEVELOPMENT.md  DOCKER_OPTIMIZATION.md  DOCKER_QUICK_REFERENCE.md  FINAL_STATUS_ANALYSIS.md  GAP_ANALYSIS.md  LOCAL_DEVELOPMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md
frontend/: .dockerignore  Dockerfile.dev  build-log.txt  build_check.txt  build_error.txt  build_error_2.txt  build_error_3.txt  build_final.txt  build_out.txt  build_out2.txt  build_out3.txt  build_output.txt  final_build.txt  lint-report.txt  next.config.mjs  next.config.ts  output.txt  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
frontend/public/data/: backtest_results.json
frontend/src/: auth.ts
frontend/src/app/: globals.css  layout.tsx  template.tsx
frontend/src/components/: error-boundary.tsx  providers.tsx  theme-provider.tsx  theme-switcher.tsx
frontend/src/context/: auth-context.tsx
frontend/src/hooks/: use-backend-api.ts  use-data-sources.ts  use-orders.ts  use-portfolio.ts  use-python-strategy.ts  use-strategies.ts  use-user.ts  use-websocket.ts
frontend/src/lib/: api-client.ts  motion-variants.ts  store.ts  themes.ts
frontend/src/services/: auth-service.ts
frontend/src/types/: api-responses.ts  framer-motion.d.ts  next-auth.d.ts  order.ts  portfolio.ts  strategy.ts
legacy_dashboard/: Dockerfile  README.md  app.py
legacy_dashboard/components/: header.py  sidebar.py  tabs.py
legacy_dashboard/data/: api.py  database.py
legacy_dashboard/styles/: custom_css.py
proto/: execution.proto  risk.proto
python-strategy-engine/: Dockerfile  README.md  backtest_engine.py  data_aggregator.py  decision_logger.py  fly.toml  grpc_server.py  requirements.txt  strategy-engine.py  strategy_evaluator.py  test_decision_logging.py  worker.py  wrangler.toml
python-strategy-engine/grpc_generated/: execution_pb2.py
python-strategy-engine/market_data/: fundamental_adapter.py
scripts/: README.md  dev-local-backend.sh  dev-local-frontend.sh  quick-start.ps1  quick-start.sh  requirements.txt  test-e2e.sh  test-integration.ps1  test-integration.sh  test_e2e.py  verify-database.ps1  verify-database.sh
strategies/examples/: graham_defensive.yaml
tests/integration/: test_end_to_end.py
workers/execution-core/: Dockerfile  README.md  package-lock.json  package.json  wrangler.toml
workers/execution-core/migrations/: 0001_init.sql
workers/execution-core/src/: bindings.ts  index.ts
workers/signal-core-wasm/: README.md  build.sh  wrangler.toml
workers/strategy-engine/: .dockerignore  agent_upload_runtime.py  backtest_engine.py  demo.ipynb  execution_client.py  scenario_injector.py  strategy-engine.py  strategy_evaluator.py  strategy_executor.py  strategy_parser.py  test_integration.py  test_polymarket.py  universe.json  worker.py  wrangler.toml
(+119 files in other folders)
